# polynomial

./: CMakeLists.txt  Readme.md  make.m  roots_mex.cpp  sturm_mex.cpp  testpolynomial.cpp
Polynomial/: Polynomial.hpp  PolynomialInternal.hpp
